--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 flask
 flask-cors
-pip install --index-url https://phonepe.mycloudrepo.io/public/repositories/phonepe-pg-sdk-python  --extra-index-url https://pypi.org/simple phonepe_sdk
 gunicorn
+phonepe_sdk
